# 3DRendering-OpenGL

./: CMakeLists.txt  README.md
shaders/: shader.frag  shader.vert
src/: camera.h  main.cpp  shader.h
